Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115772

Graph goes to empty slice view automatically

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.0 FF
    • 6.6.0 Beta1
    • Graphs: 3D
    • None
    • 1df14f1f1 (dev)

    Description

      In bars example, change selectionMode: AbstractGraph3D.SelectionItemAndRow | AbstractGraph3D.SelectionSlice

      Steps to reproduce:

      • click a bar
      • click the main view
      • click the Show expenses button

      -> graph goes into an empty slice view

      Attachments

        For Gerrit Dashboard: QTBUG-115772
        # Subject Branch Project Status CR V

        Activity

          People

            dilek Dilek Akcay
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes