Fix empty graph issue in bars

Fixes: QTBUG-115772
Task-number: QTBUG-113675
Change-Id: I141dbf6ad2ecf435fee2911907c6044047dae3d1
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>